Fix width and height issues on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -18,10 +18,12 @@ body {
   font-size: 32px;
   color: #333;
   text-decoration: none;
+  text-align: center;
 }
 
 .navigation {
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
 }
 
 
@@ -86,7 +88,7 @@ h2 {
 }
 
 .flex--between--center {
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -108,7 +110,7 @@ h2 {
 }
 
 .height--100 {
-  height: 100%;
+  min-height: 100%;
 }
 
 .height--50px {
